# hackrf

host/: CMakeLists.txt
host/cmake/modules/: FindFFTW3f.cmake  FindLIBUSB.cmake
host/hackrf-tools/: CMakeLists.txt
host/hackrf-tools/src/: CMakeLists.txt
host/libhackrf/: CMakeLists.txt
host/libhackrf/src/: CMakeLists.txt
